--- a/app/Resources/views/salesRequestForm.html.twig
+++ b/app/Resources/views/salesRequestForm.html.twig
@@ -32,6 +32,8 @@
         {% else %}
             <tr><td>Закупок не найдено</td></tr>
         {% endfor %}
-
     </table>
+    <div class="pagerfanta">
+        {{ pagerfanta(sales, 'twitter_bootstrap') }}
+    </div>
 {% endblock %}
