--- a/src/AppBundle/Resources/public/css/styles.css
+++ b/src/AppBundle/Resources/public/css/styles.css
@@ -44,3 +44,11 @@ table tr:hover {
     cursor: pointer;
     color: darkcyan;
 }
+
+table {
+    margin-top: 50px;
+}
+
+form + table {
+    margin-top: 0;
+}
