--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -16,7 +16,7 @@
         $(document).ready(function () {
             if ($("input.datepicker").length) {
                 $('.datepicker').datepicker({
-                    format: 'yyyy-mm-dd',
+                    format: 'dd-mm-yyyy',
                     startDate: '0d',
                     language: 'ru'
                 });
