--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -8,7 +8,7 @@
     <link href="{{ asset('bundles/app/css/styles.css') }}" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container">{% block content %}{% endblock %}</div>
+    <div>{% block content %}{% endblock %}</div>
     <script type="text/javascript" src="{{ asset('bundles/app/js/jquery-1.11.1.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/bootstrap-datepicker.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/bootstrap-datepicker.ru.js') }}"></script>
