Extend sales report form and pages styles update #2349

--- a/app/Resources/views/salesAddForm.html.twig
+++ b/app/Resources/views/salesAddForm.html.twig
@@ -1,6 +1,11 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
+    <p>
+        Многие посетители нашего сайта не знают, что существует такое понятие как совместные покупки. Мы решили устранить этот пробел, тем самым помочь организаторам набирать заказы. Также если Вы владелец торговой точки или интернет-магазина, посетители, которые будут приходить на Ваши ресурсы, с высокой долей вероятности будут приобретать товар, так как принципиальное решение о покупке они уже приняли.
+        </br>
+        Чтобы о Вас узнали, заполните форму ниже: Выберите регион, в котором Вы ведете свою деятельность, укажите дату завершения закупки, укажите ссылку на нее, а также укажите, отправляете ли Вы товар в другие регионы (например, почтой или транспортной компанией).
+    </p>
     <form action="{{ path('sale_add') }}" method="post" {{ form_enctype(form) }} class="form-add">
         <fieldset>
             {% if app.request.method == 'POST' and success %}
