--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -21,14 +21,14 @@
                     language: 'ru'
                 });
             }
-
-            $('.container').on('click', 'button', function (event) {
-                event.preventDefault();
-
-                var path = $('form').attr('action');
-                $('form').attr('action', path + '?region=' + $('select').val());
-                $('form').submit();
-            });
+//
+//            $('.container').on('click', 'button', function (event) {
+//                event.preventDefault();
+//
+//                var path = $('form').attr('action');
+//                $('form').attr('action', path + '?region=' + $('select').val() + '&email=' + $('input[type="text"]').val());
+//                $('form').submit();
+//            });
         });
     </script>
 </body>
