--- a/src/AppBundle/Resources/public/css/styles.css
+++ b/src/AppBundle/Resources/public/css/styles.css
@@ -76,3 +76,21 @@ form + table {
     margin-top: 20px;
     text-decoration: underline;
 }
+
+span.edit:hover {
+    cursor: pointer;
+    color: blue;
+}
+
+span.remove:hover {
+    cursor: pointer;
+    color: red;
+}
+
+.form-tr button {
+    margin-bottom: 10px;
+}
+
+.form-tr button + a {
+    margin: 20px;
+}
