--- a/app/Resources/views/salesRequestForm.html.twig
+++ b/app/Resources/views/salesRequestForm.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if form %}
-        <p style="text-indent: 40px">
+        <p style="text-indent: 40px" xmlns="http://www.w3.org/1999/html">
             Интернет-магазин-склад Altermoda.ru реализует свои товары через широкую дилерскую сеть.
             Пожалуйста, выберите регион, укажите Ваш e-mail (подтверждение антиспама) и Вы сможете получить список дилеров в Вашем регионе.
             </br>
@@ -29,6 +29,14 @@
                 </div>
             </fieldset>
         </form>
+    {% else %}
+        <div class="filters">
+            <form action="{{ path('sale_list') }}" method="get">
+                <input type="hidden" name="get_disabled" value="1">
+                <button type="submit" class="btn btn-primary" >Отключенные</button>
+            </form>
+            <button class="btn btn-primary"><a style="color: white" href="{{ path('sale_list') }}">Последние</a></button>
+        </div>
     {% endif %}
 
      {% if editForm %}<form action="{{ path('sale_edit') }}" method="post" {{ form_enctype(editForm) }} class="form-edit">{% endif %}
@@ -43,12 +51,17 @@
             </thead>
             <tbody>
                 {% for sale in sales %}
-                    <tr class="sale-id-{{ sale.id }}">
+                    <tr class="sale-id-{{ sale.id }}" data-disabled="{{ sale.isDisabled }}">
                         <td class="region-col" data-value="{{ sale.region }}">{{ regionDescr[sale.region] }}</td>
                         <td class="date-col">{{ sale.saleDate|date('d-m-Y') }}</td>
                         <td class="link-col"><a href="{{ sale.link }}">{{ sale.link }}</a></td>
                         <td style="text-align: center" class="checkbox-col">{{ sale.hasTransportDelivery ? 'Да' : 'Нет' }}</td>
-                        {% if not form %}<td data-id="{{ sale.id }}"><span class="edit">ред.</span> / <span class="remove">удалить</span></td>{% endif %}
+                        {% if not form %}
+                            <td data-id="{{ sale.id }}">
+                                <span class="status">Статус: {{ sale.isDisabled ? 'Отключено' : 'Активно' }}</span>
+                                <span class="edit">ред.</span> / <span class="remove">удалить</span>
+                            </td>
+                        {% endif %}
                     </tr>
                 {% else %}
                     {% if app.request.method == 'POST' %}
@@ -99,6 +112,10 @@
                         </div>
                     </td>
                     <td>
+                        <div class="is-disabled-checkbox">
+                            {{ form_label(editForm.isDisabled) }}
+                            {{ form_widget(editForm.isDisabled) }}
+                        </div>
                         <div class="actions">
                             <button type="submit" class="btn btn-primary">Обновить</button>
                             <a class="cancel-form" href="#">Отмена</a>
