--- a/app/Resources/views/salesRequestForm.html.twig
+++ b/app/Resources/views/salesRequestForm.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if form %}
-        <p style="text-indent: 40px" xmlns="http://www.w3.org/1999/html">
+        <p style="text-indent: 40px">
             Интернет-магазин-склад Altermoda.ru реализует свои товары через широкую дилерскую сеть.
             Пожалуйста, выберите регион, укажите Ваш e-mail (подтверждение антиспама) и Вы сможете получить список дилеров в Вашем регионе.
             </br>
